fix: fix docs dev error

--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -11,4 +11,4 @@ custom layouts, i18n, and all the features you love about Next.js.
 
 Here's what you will get in 1 minute:
 
-<Bleed>![Nextra Example](/demo.png)</Bleed>
+<Bleed>Nextra Example</Bleed>
